|
Quick Lists
|
|
Bug ID:
|
6868487
|
|
Votes
|
0
|
|
Synopsis
|
EnableInvokeDynamic and EnableMethodHandles should not be visible flags in JDK6 or JDK7
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs16(b08),
6u18(b01) (Bug ID:2181937)
, 7(b71) (Bug ID:2182194)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6817525
|
|
Submit Date
|
04-AUG-2009
|
|
Description
|
The flags EnableInvokeDynamic and EnableMethodHandles need to be categorized as experimental in the JDK6 VM (and off by default).
In a later build of JDK7, the fix for bug 6817525 will turn on those flags (both of them) by default, and at the same time recategorize them as diagnostic.
Posted Date : 2009-08-04 22:19:26.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/bd2b1f617a4e
Posted Date : 2009-08-07 02:49:10.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/bd2b1f617a4e
Posted Date : 2009-08-10 07:38:40.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |