6868487: EnableInvokeDynamic and EnableMethodHandles should not be visible flags in JDK6 or JDK7

Switch them from product to experimental; 6817525 will toggle them and switch to diagnostic

Reviewed-by: kvn